--- a/4_OptimizationForDeepNNs.ipynb
+++ b/4_OptimizationForDeepNNs.ipynb
@@ -4,9 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Student: Rodolfo Lerma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Optimization for Neural Network Training\n",
+    "\n",
     "## Machine Learning 530\n",
-    "## Stephen Elston\n"
+    "\n",
+    "## Stephen Elston"
    ]
   },
   {
@@ -30,6 +39,15 @@
     "\n",
     "`pip install hdf5`\n",
     "****"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conda install hdf5"
    ]
   },
   {
@@ -223,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +347,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Exercise 4-1:** With the simulated data prepared, it is time to try gradient decent! You will implement the **batch gradient decent** algorithm to minimize the least squares error between an estimate of the multivariate mean and the data values. This algorithm is considered batch gradient decent since all of the cases are used to compute each update of the gradient. Now, do the following: \n",
+    "## Exercise 4-1-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Exercise 4-1-1:** With the simulated data prepared, it is time to try gradient decent! You will implement the **batch gradient decent** algorithm to minimize the least squares error between an estimate of the multivariate mean and the data values. This algorithm is considered batch gradient decent since all of the cases are used to compute each update of the gradient. Now, do the following: \n",
     "> 1. Complete the `compute_gradient` function. The gradient is the normalized vector (multivariate) mean difference between an estimate of the minimum and the data values. In this case, the gradient is 2-dimensional. The gradient is computed by the following steps:     \n",
     "  a. The normalization factor is computed as $2.0/N$, where $N$ is the number of observations.    \n",
     "  b. The vector difference between the observations and the current estimate is computed using the [numpy.subtract](https://numpy.org/doc/stable/reference/generated/numpy.subtract.html) function.     \n",
@@ -385,6 +410,7 @@
    "metadata": {},
    "source": [
     "> In one or two sentences answer the following questions: How can you describe the convergence of this optimizer?     \n",
+    "\n",
     "> **End of exercise.**"
    ]
   },
@@ -461,9 +487,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Example of basic SGD\n",
-    "\n",
-    "> **Exercise 4-2:** You will now complete the code in the cell below to create a basic SGD algorithm. The code is nearly identical to the batch gradient decent function. You can use the `compute_gradient` function you have already created.    \n",
+    "### 3.1 Example of basic SGD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4-1-2:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Exercise 4-1-2:** You will now complete the code in the cell below to create a basic SGD algorithm. The code is nearly identical to the batch gradient decent function. You can use the `compute_gradient` function you have already created.    \n",
     "> Production SDG code randomly sorts the data samples and then loops over these sample. To keep things simple here you will Bernoulli sample of the full dataset within the `while` loop by these steps, which are the only difference from the batch gradient descent code.   \n",
     "> 1. Using [numpy.random.choice](https://numpy.org/doc/stable/reference/random/generated/numpy.random.choice.html) take a Bernoulli sample of size `batch_size` from the vector `indx`.      \n",
     "> 2. Subsample the full dataset using your index sample in your call to `compute_gradient`. \n",
@@ -574,7 +612,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Exercise 4-3:** You will complete the code in the cell below by the following steps to add momentum to the gradient update. \n",
+    "## Exercise 4-1-3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Exercise 4-1-3:** You will complete the code in the cell below by the following steps to add momentum to the gradient update. \n",
     "> 1. The first two lines of code are identical to the SGD algorithm for computing the stochastically sampled gradient.   \n",
     "> 2. Compute the momentum update using the gradient, learning rate and current value of the momentum.  \n",
     "> 3. Updated the estimate of the minimum by adding the momentum to the current estimate. \n",
@@ -894,7 +939,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Exercise 4-4:** In one or two sentences answer the following questions.   \n",
+    "## Exercise 4-1-4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Exercise 4-1-4:** In one or two sentences answer the following questions.   \n",
     "> 1. Compare the trajectory of the Adam optimizer to SGD with momentum.      \n",
     "> 2. How does the stochastic error compare to the SGD algorithms, and why.  \n",
     "> **End of exercise.**"
@@ -1003,19 +1055,12 @@
    "source": [
     "#### Copyright 2018, 2019, 2022, Stephen  F Elston. All rights reserved. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1029,7 +1074,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
