Correction on some plots

--- a/4_RegularizationForDeepNNs.ipynb
+++ b/4_RegularizationForDeepNNs.ipynb
@@ -343,6 +343,7 @@
     "> 1. Compare the graphs of the fit of the polynomial model to the single feature model. What does the difference tell you about model capacity and bias?  \n",
     "> 2. Compare the training RMSE of the polynomial model to the single regression models. What does this difference tell you about training bias, and why? \n",
     "> 3. Compare the values of the model coefficients of the polynomial model with the single feature model. What does the difference in magnitudes tell you about the likely generalization? \n",
+    "\n",
     "> **End of exercise**."
    ]
   },
@@ -683,9 +684,9 @@
    "source": [
     "> **Exercise 4-2-2:** For this exercise you will continue working with the model matrix of the running examples, `x_scale`. You will first investigate the eigenvalues of the unregularized model matrix. Then you will apply regularization to the model matrix and investigate the changes in the eigenvalue. Now do the following:   \n",
     "> 1. Compute the (**real part** of the **unnormaized**) covariance matrix using [numpy.transpose](https://numpy.org/doc/stable/reference/generated/numpy.transpose.html) and [numpy.matmul](https://numpy.org/doc/stable/reference/generated/numpy.matmul.html).\n",
-    "> 2. Compute the eigenvalues of the covariance matrix using (numpy.linalg.eigvals)[https://numpy.org/doc/stable/reference/generated/numpy.linalg.eigvals.html]. \n",
+    "> 2. Compute the eigenvalues of the covariance matrix using [numpy.linalg.eigvals](https://numpy.org/doc/stable/reference/generated/numpy.linalg.eigvals.html)\n",
     "> 3. Print the eigenvalue vector.  \n",
-    "> 4. Log base 10 transform the eigenvalues using (numpy.log10)[https://numpy.org/doc/stable/reference/generated/numpy.log10.html] and plot them vs the number. The eigenvalues are in numbered order. "
+    "> 4. Log base 10 transform the eigenvalues using [numpy.log10](https://numpy.org/doc/stable/reference/generated/numpy.log10.html) and plot them vs the number. The eigenvalues are in numbered order. "
    ]
   },
   {
@@ -757,6 +758,7 @@
     "> 1. Examine the eigenvalues of the unregularized model matrix. Taking advantage of the fact that eigenvalues are presented descending order, what is the approximate condition number of the scaled model matrix, what does this tell you about the convergence properties of the model and its generalization properties?   \n",
     "> 2. Examine the eigenvalues of the regularized model matrix. What is the approximate condition number of the regularized model matrix, what does this tell you about the convergence properties of the model and its generalization properties? \n",
     "> 3. Notice that the eigenvalues of the regularized model converge to the value of the regularization coefficient as the eigenvalue number increases. Eigenvalues of about the value of the regularization coefficient may add small amounts of bias to the model predictions but cannot provide any predictive information. Given this consideration, what is the equivalent number of informative features? Note that these 'features' are projections into the eigenspace, not actual columns of the model matrix.  \n",
+    "\n",
     "> **End of exercise**."
    ]
   },
@@ -1005,7 +1007,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Examine and compare the results for the regularized and un-regularizzed neural network models and the regularized linear model. The linear model has the lowest capacity and the lowest variance. The highest capacity model is the un-regularized neural network model which has the highest variance and a test fit curve that deviates significantly from the values, but shows low systematic bias. The regularized neural network model has intermediate capacity and variance. The bias of the regularized neural network model can be seen in the fit to the test data.      "
+    "Examine and compare the results for the regularized and un-regularized neural network models and the regularized linear model. The linear model has the lowest capacity and the lowest variance. The highest capacity model is the un-regularized neural network model which has the highest variance and a test fit curve that deviates significantly from the values, but shows low systematic bias. The regularized neural network model has intermediate capacity and variance. The bias of the regularized neural network model can be seen in the fit to the test data.      "
    ]
   },
   {
@@ -1362,8 +1364,8 @@
     "\n",
     "To get a feel for what this means in practice examine Figure 5.1. This figure shows a fully connected network with 4 hidden units and a dropout probability $p = 0.5$. \n",
     "\n",
-    "![](img/DropoutExample.JPG)\n",
-    "![](img/DropoutExample2.JPG)\n",
+    "![](Figures/DropoutExample.JPG)\n",
+    "![](Figures/DropoutExample2.JPG)\n",
     "\n",
     "<center>Figure 5.1   \n",
     "Some possible dropouts for a simple fully connected network with p = 0.5</center>\n",
@@ -1454,7 +1456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The familiar loss plot looks a bit different here. Notice the kinks in the training loss curve. THis is likely a result of the dropout sampling. \n",
+    "The familiar loss plot looks a bit different here. Notice the kinks in the training loss curve. This is likely a result of the dropout sampling. \n",
     "\n",
     "Execute the code in the cell below and examine the accuracy vs. epoch curves. "
    ]
@@ -1718,7 +1720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
